--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
+* {
+  font-family: "Poppins", sans-serif;
+}
+
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(33, 37, 41);
 }
