--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,13 +3,16 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 0.5rem;
+  padding: 1rem;
   color: white;
   font-size: 1rem;
   font-weight: bold;
   position: relative;
   margin: 0 20%;
-  border-bottom: 1px solid #484848;
+  /* border-bottom: 1px solid #484848; */
+  /* border-bottom: 1px solid #fbbc05; */
+  border-left: 1px solid #484848;
+  border-right: 1px solid #484848;
 }
 
 .brand {
@@ -17,6 +20,7 @@ nav {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  color: #fbbc05;
 }
 
 .brand > img {
@@ -25,6 +29,7 @@ nav {
 
 .title {
   font-size: 1.25rem;
+  color: #fbbc05;
 }
 
 @media (max-width: 750px) {
@@ -32,9 +37,10 @@ nav {
     justify-content: unset;
     flex-direction: column;
     align-items: flex-end;
-    padding: 1rem 0.5rem;
+    padding: 1rem;
     padding-bottom: 0.5rem;
-    margin: 0 1rem;
+    margin: 0;
+    border: none;
   }
 
   .brand {
@@ -44,7 +50,7 @@ nav {
   .brand > img {
     height: 3.5rem;
     position: absolute;
-    left: 0.5rem;
+    left: 1rem;
     top: 0.75rem;
   }
 }
