--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,13 +1,51 @@
 .projects-container {
   box-sizing: border-box;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 1rem;
+  /* border: 1px solid #484848; */
+  /* border-radius: 0.25rem; */
+  padding: 1rem;
+  margin: 0.5rem 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  width: fit-content;
+}
+
+.project {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .projects-container img {
   box-sizing: border-box;
-  width: 100%;
-  height: 20vh;
+  border-radius: 0.25rem;
+  width: 300px;
+  height: auto;
   object-fit: cover;
+  /* opacity: 0.9; */
+  border: 2px solid #fbbc05;
+  border: 2px solid #4285f4;
+}
+
+.project:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
+
+.project:active {
+  opacity: 0.75;
+}
+
+@media (max-width: 750px) {
+  .projects-container {
+    flex-wrap: nowrap;
+    overflow: auto;
+    width: 100%;
+  }
+
+  .projects-container img {
+    width: 200px;
+  }
 }
