--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -6,7 +6,7 @@ nav {
   padding: 1rem;
   color: white;
   font-size: 1rem;
-  font-weight: bold;
+  /* font-weight: bold; */
   position: relative;
   margin: 0 20%;
   /* border-bottom: 1px solid #484848; */
